--- a/css/style.css
+++ b/css/style.css
@@ -12,13 +12,62 @@ footer{
     color: var(--text-grey);
 }
 
+#mynav a:hover{
+    color: var(--low-green);
+}
 /* HERO */
 #hero{
     background-color: var(--low-green);
 }
+#hero img {
+    width: 250px;
+}
+.star{
+    width: 50%;
+}
+.star i{
+    font-size: 50px;
+}
+.star:before, .star:after{
+   content: '';
+   display: block;
+   width: 30%;
+   height: 4px;
+   border-radius: 2px;
+background-color: var(--bg-main);
+
+
+}
 /* PORTFOLIO */
 #portfolio{
     background-color: var(--bg-main);
+}
+.star.black:before,
+.star.black:after{
+    background-color: var(--text--dark-grey);
+}
+.img-container{
+    position: relative;
+}
+
+.img-container:after{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 6rem;
+    content: '+';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(26,188,156,0.7);
+    color: white;
+    opacity: 0;
+    cursor: pointer;
+}
+.img-container:hover:after{
+    opacity: 1;
 }
 /* ABOUT */
 #about{
