--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,7 @@ background-color: var(--bg-main);
 /* ABOUT */
 #about{
     background-color: var(--low-green);
+    color: var(--bg-main);
 }
 #about .btn-download{
     border: 1px solid white;
